fix dark mode button alignment and sizing

--- a/static/style.css
+++ b/static/style.css
@@ -43,8 +43,12 @@
 
 * {
   transition: background-color 0.6s ease, color 1s ease;
+  -webkit-transition: background-color 0.6s ease, color 1s ease;
 }
 .color-mode__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 32px;
   height: 30px;
   position: absolute;
